--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
-        <a class="navbar-brand" href="#">รถตู้สกลนคร</a>
+        <a class="navbar-brand" href="#">รถตู้สกลนคร ทดสอบ</a>
       </div>
     </nav>
     <header>
